@@ -24,6 +24,12 @@
 # Reset all settings and delete all data on startup
 # SYNERGY_RESET_ALL=true
 
+# Enable the activation dialog (used for testing)
+# SYNERGY_ENABLE_ACTIVATION=true
+
+# Show licensed product menu items, etc (used for testing)
+# SYNERGY_LICENSED_PRODUCT=true
+
 #
 # Build
 #
